tests/machine/x/c/group_by_multi_join.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/group_by_multi_join.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/group_by_multi_join.c:191:7: warning: implicit declaration of function ‘filtered_item_list_t_create’ [-Wimplicit-function-declaration]
  191 |       filtered_item_list_t_create(partsupp.len * suppliers.len * nations.len);
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/group_by_multi_join.c:191:7: error: invalid initializer
/workspace/mochi/tests/machine/x/c/group_by_multi_join.c:229:31: warning: implicit declaration of function ‘grouped_item_list_t_create’ [-Wimplicit-function-declaration]
  229 |   grouped_item_list_t tmp14 = grouped_item_list_t_create(tmp13.len);
      |                               ^~~~~~~~~~~~~~~~~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/group_by_multi_join.c:229:31: error: invalid initializer
/workspace/mochi/tests/machine/x/c/group_by_multi_join.c:233:34: error: invalid initializer
  233 |     filtered_item_list_t tmp16 = filtered_item_list_t_create(_gp.items.len);
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~

   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:50Z
