tests/machine/x/c/group_by_multi_join.c
// Generated by Mochi compiler v0.10.25 on 2025-07-14T02:49:29Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static double _sum_float(list_float v) {
  double sum = 0;
  for (int i = 0; i < v.len; i++)
    sum += v.data[i];
  return sum;
}
typedef struct {
  int key;
  list_int items;
} _GroupInt;
typedef struct {
  int len;
  int cap;
  _GroupInt *data;
} list_group_int;
static list_group_int _group_by_int(list_int src) {
  list_group_int res;
  res.len = 0;
  res.cap = 0;
  res.data = NULL;
  for (int i = 0; i < src.len; i++) {
    int key = src.data[i];
    int idx = -1;
    for (int j = 0; j < res.len; j++)
      if (res.data[j].key == key) {
        idx = j;
        break;
      }
    if (idx == -1) {
      if (res.len >= res.cap) {
        res.cap = res.cap ? res.cap * 2 : 4;
        res.data = (_GroupInt *)realloc(res.data, sizeof(_GroupInt) * res.cap);
      }
      res.data[res.len].key = key;
      res.data[res.len].items = list_int_create(0);
      idx = res.len++;
    }
    _GroupInt *g = &res.data[idx];
    g->items.data =
        (int *)realloc(g->items.data, sizeof(int) * (g->items.len + 1));
    g->items.data[g->items.len++] = src.data[i];
  }
  return res;
}
typedef struct {
  int id;
  char *name;
} nation_t;
typedef struct {
  int len;
  nation_t *data;
} nation_list_t;
static nation_list_t create_nation_list(int len) {
  nation_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(nation_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int id;
  int nation;
} supplier_t;
typedef struct {
  int len;
  supplier_t *data;
} supplier_list_t;
static supplier_list_t create_supplier_list(int len) {
  supplier_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(supplier_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int part;
  int supplier;
  double cost;
  int qty;
} partsupp_t;
typedef struct {
  int len;
  partsupp_t *data;
} partsupp_list_t;
static partsupp_list_t create_partsupp_list(int len) {
  partsupp_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(partsupp_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int part;
  double value;
} filtered_item_t;
typedef struct {
  int len;
  filtered_item_t *data;
} filtered_item_list_t;
static filtered_item_list_t create_filtered_item_list(int len) {
  filtered_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(filtered_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int part;
  double total;
} grouped_item_t;
typedef struct {
  int len;
  grouped_item_t *data;
} grouped_item_list_t;
static grouped_item_list_t create_grouped_item_list(int len) {
  grouped_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(grouped_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int main() {
  nation_t tmp1_data[] = {(nation_t){.id = 1, .name = "A"},
                          (nation_t){.id = 2, .name = "B"}};
  nation_list_t tmp1 = {2, tmp1_data};
  nation_list_t nations = tmp1;
  supplier_t tmp2_data[] = {(supplier_t){.id = 1, .nation = 1},
                            (supplier_t){.id = 2, .nation = 2}};
  supplier_list_t tmp2 = {2, tmp2_data};
  supplier_list_t suppliers = tmp2;
  partsupp_t tmp3_data[] = {
      (partsupp_t){.part = 100, .supplier = 1, .cost = 10.0, .qty = 2},
      (partsupp_t){.part = 100, .supplier = 2, .cost = 20.0, .qty = 1},
      (partsupp_t){.part = 200, .supplier = 1, .cost = 5.0, .qty = 3}};
  partsupp_list_t tmp3 = {3, tmp3_data};
  partsupp_list_t partsupp = tmp3;
  filtered_item_list_t tmp4 =
      filtered_item_list_t_create(partsupp.len * suppliers.len * nations.len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < partsupp.len; tmp6++) {
    partsupp_t ps = partsupp.data[tmp6];
    for (int tmp7 = 0; tmp7 < suppliers.len; tmp7++) {
      supplier_t s = suppliers.data[tmp7];
      if (!(s.id == ps.supplier)) {
        continue;
      }
      for (int tmp8 = 0; tmp8 < nations.len; tmp8++) {
        nation_t n = nations.data[tmp8];
        if (!(n.id == s.nation)) {
          continue;
        }
        if (!((strcmp(n.name, "A") == 0))) {
          continue;
        }
        tmp4.data[tmp5] =
            (filtered_item_t){.part = ps.part, .value = ps.cost * ps.qty};
        tmp5++;
      }
    }
  }
  tmp4.len = tmp5;
  filtered_item_list_t filtered = tmp4;
  filtered_item_list_t tmp9 = create_filtered_item_list(filtered.len);
  int tmp10_data[filtered.len];
  list_int tmp10 = {0, tmp10_data};
  int tmp11 = 0;
  for (int i12 = 0; i12 < filtered.len; i12++) {
    filtered_item_t x = filtered.data[i12];
    tmp9.data[tmp11] = x;
    tmp10.data[tmp11] = x.part;
    tmp11++;
  }
  tmp9.len = tmp11;
  tmp10.len = tmp11;
  list_group_int tmp13 = _group_by_int(tmp10);
  grouped_item_list_t tmp14 = grouped_item_list_t_create(tmp13.len);
  int tmp15 = 0;
  for (int gi = 0; gi < tmp13.len; gi++) {
    _GroupInt _gp = tmp13.data[gi];
    filtered_item_list_t tmp16 = filtered_item_list_t_create(_gp.items.len);
    for (int i17 = 0; i17 < _gp.items.len; i17++) {
      tmp16.data[i17] = tmp9.data[_gp.items.data[i17]];
    }
    tmp16.len = _gp.items.len;
    struct {
      int key;
      filtered_item_list_t items;
    } g = {_gp.key, tmp16};
    list_float tmp18 = list_float_create(g.items.len);
    int tmp19 = 0;
    for (int i20 = 0; i20 < g.items.len; i20++) {
      filtered_item_t r = g.items.data[i20];
      tmp18.data[tmp19] = r.value;
      tmp19++;
    }
    tmp18.len = tmp19;
    tmp14.data[tmp15] =
        (grouped_item_t){.part = g.key, .total = _sum_float(tmp18)};
    tmp15++;
  }
  tmp14.len = tmp15;
  grouped_item_list_t grouped = tmp14;
  for (int i21 = 0; i21 < grouped.len; i21++) {
    grouped_item_t it = grouped.data[i21];
    if (i21 > 0)
      printf(" ");
    printf("map[");
    printf("part:");
    printf("%d", it.part);
    printf(" ");
    printf("total:");
    printf("%.17g", it.total);
    printf("]");
  }
  printf("\n");
  return 0;
}
